--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,8 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 100%;
+  right: 0;
+  left: 300px;
 }
 
 h3 {
@@ -46,6 +47,28 @@ button:hover {
 
 #feature-info {
   background: #41779c;
-  padding: 0;
-  min-height: 0;
+  padding: 15px;
+  min-height: 150px;
+}
+
+/* sidebar is fixed with and positioned to the left */
+#sidebar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 300px;
+  background-color: #0a99c3;
+  color: #FFF;
+  padding: 25px;
+  box-sizing: border-box;
+}
+
+.marker {
+  background-image: url('university-solid.svg');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
 }
