--- a/css/styles.css
+++ b/css/styles.css
@@ -58,3 +58,24 @@ button:hover {
   padding: 25px;
   box-sizing: border-box;
 }
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: #9966ff;
+  color: #FFF;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #9966ff;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
