--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ button:hover {
   top: 0;
   bottom: 0;
   width: 500px;
-  background-color: #0a99c3;
+  background-color: #23374d;
   color: #FFF;
   padding: 25px;
   box-sizing: border-box;
@@ -61,7 +61,7 @@ button:hover {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #9966ff;
+  background-color: #1089ff;
   color: #FFF;
   padding: 16px;
   font-size: 16px;
@@ -71,7 +71,7 @@ button:hover {
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #9966ff;
+  background-color: #1089ff;
 }
 
 /* The container <div> - needed to position the dropdown content */
