--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ button:hover {
   background-color: #006987;
 }
 
-#feature-info {
+#feature {
   background: #41779c;
   padding: 15px;
   min-height: 150px;
